Closed Bug 256007 Opened 22 years ago Closed 21 years ago

Help Viewer's left pane is empty

Categories

(SeaMonkey :: Help Viewer, defect)

x86
All
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: steffen.wilberg, Assigned: vlad)

Details

(Keywords: fixed-aviary1.0, regression)

Attachments

(1 file)

Open Help->Help Contents and notice that the left pane is empty. Confirmed on Linux and Windows. Maybe a regression from vlad's checkin starting 08/17/2004 19:00 PDT.
Flags: blocking-aviary1.0PR+
Regressed between 08/17 and 08/18. This is a blocker for work on Help content.
There is something with the way help deals with the datasources for the side pane that is interacting badly with the inference data source bits. If I set an 'infer="forward-proxy"' on the help elements that have templates, the content gets built correctly; however, many other places in ffox that don't use inference (e.g. history sidebar, various menus, etc.) work fine. Effectively, if the infer attribute isn't there, the template builder should behave exactly as it did before, so I'm not sure what's going on. I'll keep tracking it down.
Attached patch agg-fix-1.patchSplinter Review
The template builder didn't correctly pick up the newly created Composite DS if the datasources were reloaded, which the help sidebar does (as it dynamically adds them). Attached patch fixes
Thanks vlad, works fine!
Status: NEW → ASSIGNED
What is missing to get this checked in?
(In reply to comment #5) > What is missing to get this checked in? aviary approval.
Comment on attachment 156464 [details] [diff] [review] agg-fix-1.patch a=asa
Attachment #156464 - Flags: approval-aviary? → approval-aviary+
in, thanks
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Keywords: fixed-aviary1.0
vlad: Were the changes that caused this regression checked into the trunk or 1.7?
Neither; I'll be checking this into the trunk (including this patch) today, however.
Do you see any reason why this patch would be useful on 1.7?
Not this particular patch by itself; if the aggregation patch from bug 235665 gets taken for 1.7, then this will come along with it.
verified with Firefox Branch 2004-09-10-08-0.9
Status: RESOLVED → VERIFIED
Flags: blocking-aviary1.0PR+
Flags: approval-aviary+
Product: Firefox → Toolkit
Version: 1.0 Branch → unspecified
Flags: in-testsuite?
Product: Toolkit → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: