b=256007, help viewer's left pane is empty, a=asa